--- a/src/principalPages/principal.css
+++ b/src/principalPages/principal.css
@@ -81,3 +81,65 @@ input[name='dob']::after{
     background-color: #e0e0e0;
   }
   
+  .login-formik{
+    height:100vh;
+    width:100%;
+  }
+  .login-form{
+    width: 100vw;
+    height:100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: goldenrod;
+  }
+  .login-form h2{
+    font-size:xx-large;
+    color:black;
+    font-weight: 600;
+  }
+  .login-field-divs{
+    margin-top:10px;
+  }
+  .login-field{
+    padding:10px;
+    width:200px;
+    border: 1px solid black;
+    border-radius: 5px;
+    outline: none;
+  }
+  .login-field-select:active,.login-field:active{
+    border: 2px solid red;
+    
+  }
+  .login-field-select{
+    padding:10px;
+    width:223px;
+    border: 1px solid black;
+    border-radius: 5px;
+    outline: none;
+  }
+  .login-buttons{
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    height:140px;
+    
+  }
+  .login-buttons button{
+    margin-top: 10px;
+    width:220px;
+    padding:10px;
+    border: 1px solid black;
+    background-color:greenyellow;
+    border-radius: 5px;
+
+  }
+  .login-buttons button:hover{
+    background-color: blueviolet;
+    color: white;
+  }
+  .error-message-login{
+    color:darkblue;
+  }
